--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,7 @@ Pagina principal del sistema Jordan.
                 <h3 style="width: 90%;margin-left: 5%; font-size: 20pt">Top 5</h3>
                 <p:accordionPanel activeIndex="0,1,2,3,4" multiple="true" style="width: 90%;margin-left: 5%"
                                   value="#{controladorLocal.top5}" var="_local" >
-                    <p:tab title="" >
+                    <p:tab title="" disabled="true">
                         <h:panelGrid columns="2" width="20%" style="float: left">
                             <p:outputLabel value="#{controladorLocal.posición}" 
                                            style="font-size: 30pt"/>
