Agrega init para el host, no es parte del proyecto es solución para la base en el host. con un servidor propio no es necesario, ya que la entrega inclyuye la base de datos inicializada, pero el host no permite subirlo. Coloca búsqueda en las plantillas local.xhtml y user.xhtml Solo falta recuperar comentario para redes sociales.

--- a/src/main/webapp/Plantillas/local.xhtml
+++ b/src/main/webapp/Plantillas/local.xhtml
@@ -23,16 +23,21 @@
                     <p:menubar styleClass="centrado">
                         <p:menuitem value="INICIO" url="../jordan" style="margin: 10pt"/>
                         <p:menuitem>
-                            <p:selectOneMenu value="elige" style="margin: 7pt">
-                                <f:selectItem itemLabel="Categoría de Búsqueda" itemValue=""/>
+                            <p:selectOneMenu value="#{controladorLocal.opciónDeBúsqueda}" 
+                                             style="margin: 7pt" required="true">
+                                <f:selectItem itemLabel="Categoría de Búsqueda" itemValue=""
+                                              noSelectionOption="true" />
                                 <f:selectItem itemLabel="Comida" itemValue="Comida" />
                                 <f:selectItem itemLabel="Local" itemValue="Local" />
                                 <f:selectItem itemLabel="Lugar" itemValue="Lugar" />
                             </p:selectOneMenu>
                         </p:menuitem>
                         <p:menuitem>
-                            <p:inputText placeholder="Busqueda" style="margin: 5pt;margin-right: 0pt"/>
-                            <p:button icon="ui-icon-search" title="Buscar" style="margin: 5pt; margin-left: 0pt"/>
+                            <p:inputText placeholder="Busqueda" style="margin: 5pt;margin-right: 0pt"
+                                         value="#{controladorLocal.busqueda}"/>
+                            <p:commandButton icon="ui-icon-search" title="Buscar"
+                                             style="margin: 5pt; margin-left: 0pt" action="busqueda"
+                                             actionListener="#{controladorLocal.realizarBúsqueda()}"/>
                         </p:menuitem>
                         <p:menuitem rendered="#{!controladorSesión.sesionIniciada}">
                             <p:commandButton icon="ui-icon-key" onclick="PF('logeo').show();"
