Modifica versión del pomp, modifica rutas a index en las barras.

--- a/src/main/webapp/Plantillas/user.xhtml
+++ b/src/main/webapp/Plantillas/user.xhtml
@@ -18,7 +18,7 @@
                 
                 <h:form>
                     <p:menubar styleClass="centrado">
-                        <p:menuitem value="INICIO" url="../jordan" style="margin: 10pt"/>
+                        <p:menuitem value="INICIO" url="../jordan-1" style="margin: 10pt"/>
                         <p:menuitem>
                             <p:selectOneMenu value="#{controladorLocal.opciónDeBúsqueda}" 
                                              style="margin: 7pt" required="true">
