--- a/src/main/webapp/Plantillas/admin.xhtml
+++ b/src/main/webapp/Plantillas/admin.xhtml
@@ -17,7 +17,7 @@
 
                 <h:form id="busqueda">
                     <p:menubar styleClass="centrado">
-                        <p:menuitem value="INICIO" url="../jordan/index.xhtml"
+                        <p:menuitem value="INICIO" url="../jordan-1"
                                     style="margin-right: 20pt; color: black; font-size: 20pt; float: left" />
                         <p:menuitem 
                             value="Cerrar Sesión" 
