depuré error de inicio en init.xhtml

--- a/src/main/webapp/init.xhtml
+++ b/src/main/webapp/init.xhtml
@@ -21,7 +21,7 @@ and open the template in the editor.
 
                 <h:form id="busqueda">
                     <p:menubar styleClass="centrado">
-                        <p:menuitem value="INICIO" url="../jordan"
+                        <p:menuitem value="INICIO" url="../jordan-1"
                                     style="margin-right: 20pt; color: black; font-size: 20pt; float: left" />
                     </p:menubar>
                 </h:form>
